--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
+  app_ui:
+    path: ./packages/app_ui
   bloc: ^8.1.2
   flutter:
     sdk: flutter
@@ -14,6 +16,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.0
+  pokeapi_client:
+    path: ./packages/pokeapi_client
 
 dev_dependencies:
   bloc_test: ^9.1.4
