--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,15 @@ dependencies:
     path: ./packages/app_ui
   bloc: ^8.1.2
   dio: ^5.3.3
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
+  go_router: ^11.1.2
   intl: ^0.18.0
+  json_annotation: ^4.8.1
   pokeapi_client:
     path: ./packages/pokeapi_client
   pokemon_repository:
@@ -26,6 +29,7 @@ dev_dependencies:
   bloc_test: ^9.1.4
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.7.1
   mocktail: ^1.0.0
   very_good_analysis: ^5.1.0
 
